# so_arm100_ws

./: README.md  perception.ipynb  table.scene
python_sdk/: Servo Python SDK.ipynb
src/ro_arm100_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/ro_arm100_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  st3215_ros2_control.ros2_control.xacro  st3215_ros2_control.srdf  st3215_ros2_control.urdf.xacro
src/ro_arm100_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/so_arm100/: CMakeLists.txt  package.xml
src/so_arm100/config/: controllers.yaml
src/so_arm100/launch/: description.launch.py  jsp_control_demo.launch.py  moveit_demo.launch.py  perception.launch.py
src/so_arm100/urdf/: so_arm100.urdf
src/so_arm100_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/so_arm100_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  sensors_3d.yaml  so_arm100.ros2_control.xacro  so_arm100.srdf  (+1 more)
src/st3215_ros2_control/: CMakeLists.txt  README  package.xml
src/st3215_ros2_control/config/: config.yaml  controllers.yaml
src/st3215_ros2_control/launch/: description.launch.py  jsp_control_demo.launch.py  perception.launch.py  st3215_control.launch.py
src/st3215_ros2_control/rviz/: roam100.rviz
src/st3215_ros2_control/src/: st3215_control.cpp
src/st3215_ros2_control/urdf/: so_arm100.urdf
(+2 files in other folders)
